# CyMySQL

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
cymysql/: __init__.py  __version__.py  connections.py  converters.py  cursors.py  err.py  packet.py  packet.pyx  result.py  result.pyx  socketwrapper.py
cymysql/aio/: connections.py  result.py
cymysql/tests/: __init__.py  base.py  test_basic.py  test_issues.py
misc/: mysqlproxy.py
