[project]
name = "CyMySQL"
description = "Python MySQL Driver using Cython"
authors = [
    {name = "Yutaka Matsubara", email = "yutaka.matsubara@gmail.com"}
]
maintainers = [
    {name = "Hajime Nakagami", email = "nakagami@gmail.com"}
]
dependencies = []

readme = "README.rst"
license = {text = "MIT License"}
keywords = ["MySQL"]

classifiers = [
    'Development Status :: 4 - Beta',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Topic :: Database',
    'Topic :: Database :: Front-Ends',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = ["version"]

[project.urls]
"Project" = "https://github.com/nakagami/CyMySQL"

[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "cymysql.__version__"}
