[build-system]
requires = ["setuptools>=61.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "CyMySQL"
description = "Python MySQL Driver using Cython"
readme = "README.rst"
keywords = ["MySQL"]
authors = [
    { name = "Yutaka Matsubara", email = "yutaka.matsubara@gmail.com" }
]
maintainers = [
    { name = "Hajime Nakagami", email = "nakagami@gmail.com" }
]
dependencies = ["pycryptodome"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Database',
    'Topic :: Database :: Front-Ends',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = ["version"]

[project.optional-dependencies]
"zstd" = ["pyzstd"]
"vector" = ["numpy"]

[project.urls]
"Project" = "https://github.com/nakagami/CyMySQL/"

[tool.setuptools.dynamic]
version = {attr = "cymysql.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["cymysql*"]
